--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.3.13",
     "browser-sync": "2.10.1",
+    "connect-history-api-fallback": "1.1.0",
     "del": "2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
