--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gulp-babel": "6.1.1",
     "gulp-clip-empty-files": "0.1.1",
     "gulp-env": "0.4.0",
-    "gulp-eslint": "1.1.1",
+    "gulp-eslint": "2.0.0-rc-3",
     "gulp-handlebars": "4.0.0",
     "gulp-if": "2.0.0",
     "gulp-imagemin": "2.4.0",
