--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "gulp-autoprefixer": "3.1.0",
     "gulp-babel": "6.1.1",
     "gulp-clip-empty-files": "0.1.1",
+    "gulp-cssnano": "2.1.0",
     "gulp-env": "0.4.0",
     "gulp-eslint": "2.0.0-rc-3",
     "gulp-handlebars": "4.0.0",
     "gulp-if": "2.0.0",
     "gulp-imagemin": "2.4.0",
     "gulp-load-plugins": "1.2.0",
-    "gulp-minify-css": "1.2.3",
     "gulp-minify-html": "1.0.5",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
