--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "license": "AGPL-3.0",
   "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "4.1.6",
-    "babel-plugin-transform-async-to-generator": "^6.4.6",
+    "babel-eslint": "4.1.7",
+    "babel-plugin-transform-async-to-generator": "6.4.6",
     "babel-plugin-transform-class-properties": "6.4.0",
     "babel-plugin-transform-decorators": "6.4.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
@@ -31,7 +31,7 @@
     "del": "2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
-    "gulp-babel": "6.1.1",
+    "gulp-babel": "6.1.2",
     "gulp-clip-empty-files": "0.1.1",
     "gulp-cssnano": "2.1.0",
     "gulp-env": "0.4.0",
@@ -50,10 +50,10 @@
     "gulp-util": "3.0.7",
     "gulp-wrap": "0.11.0",
     "handlebars": "4.0.5",
-    "jspm": "0.16.24",
+    "jspm": "0.16.26",
     "require-dir": "0.3.0",
     "sw-precache": "2.3.0",
-    "systemjs-builder": "0.15.4"
+    "systemjs-builder": "0.15.5"
   },
   "jspm": {
     "directories": {
