--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "4.1.6",
+    "babel-plugin-transform-async-to-generator": "^6.4.6",
     "babel-plugin-transform-class-properties": "6.4.0",
     "babel-plugin-transform-decorators": "6.4.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
