--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "gulp-env": "0.4.0",
     "gulp-eslint": "2.0.0-rc-3",
     "gulp-handlebars": "4.0.0",
+    "gulp-htmlmin": "1.3.0",
     "gulp-if": "2.0.0",
     "gulp-imagemin": "2.4.0",
     "gulp-load-plugins": "1.2.0",
-    "gulp-minify-html": "1.0.5",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
     "gulp-sass": "2.1.1",
