--- a/gulp/.scss-lint.yml
+++ b/gulp/.scss-lint.yml
@@ -21,6 +21,9 @@ linters:
         max_depth: 5
         ignore_parent_selectors: true
 
+    PropertySortOrder:
+        enabled: false
+
     PropertyUnits:
         global: ['em', 'rem', '%', 'vw', 'vh', 'vmin', 'vmax', 's']
 
