--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
       "backbone.nativeajax": "github:akre54/Backbone.NativeAjax@^0.4.3",
       "backbone.nativeview": "github:akre54/Backbone.NativeView@^0.3.3",
       "handlebars": "github:components/handlebars.js@^4.0.5",
+      "seeThru": "github:m90/seeThru@^3.0.0",
       "underscore": "npm:underscore@^1.8.3"
     },
     "devDependencies": {
