--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "browser-sync": "2.11.1",
     "connect-history-api-fallback": "1.1.0",
     "del": "2.2.0",
+    "eslint": "2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-babel": "6.1.2",
