--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   "license": "AGPL-3.0",
   "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "5.0.0",
-    "babel-plugin-transform-async-to-generator": "6.5.0",
-    "babel-plugin-transform-class-properties": "6.5.2",
-    "babel-plugin-transform-decorators": "6.5.0",
+    "babel-eslint": "6.0.0-beta.6",
+    "babel-plugin-transform-async-to-generator": "6.7.0",
+    "babel-plugin-transform-class-properties": "6.6.0",
+    "babel-plugin-transform-decorators": "6.6.5",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-preset-es2015": "6.5.0",
+    "babel-preset-es2015": "6.6.0",
     "browser-sync": "2.11.1",
     "connect-history-api-fallback": "1.1.0",
     "del": "2.2.0",
-    "eslint": "2.2.0",
+    "eslint": "2.4.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-babel": "6.1.2",
@@ -47,14 +47,14 @@
     "gulp-sass": "2.2.0",
     "gulp-scss-lint": "0.3.9",
     "gulp-sourcemaps": "1.6.0",
-    "gulp-uglify": "1.5.2",
+    "gulp-uglify": "1.5.3",
     "gulp-util": "3.0.7",
     "gulp-wrap": "0.11.0",
     "handlebars": "4.0.5",
-    "jspm": "0.16.29",
+    "jspm": "0.16.31",
     "require-dir": "0.3.0",
     "sw-precache": "3.1.0",
-    "systemjs-builder": "0.15.9"
+    "systemjs-builder": "0.15.13"
   },
   "jspm": {
     "directories": {
