--- a/package.json
+++ b/package.json
@@ -20,41 +20,41 @@
   "license": "AGPL-3.0",
   "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "6.0.0-beta.6",
-    "babel-plugin-transform-async-to-generator": "6.7.0",
+    "babel-eslint": "6.0.3",
+    "babel-plugin-transform-async-to-generator": "6.7.4",
     "babel-plugin-transform-class-properties": "6.6.0",
     "babel-plugin-transform-decorators": "6.6.5",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.6.0",
-    "browser-sync": "2.11.1",
-    "connect-history-api-fallback": "1.1.0",
+    "browser-sync": "2.12.3",
+    "connect-history-api-fallback": "1.2.0",
     "del": "2.2.0",
-    "eslint": "2.4.0",
+    "eslint": "2.8.0",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-babel": "6.1.2",
-    "gulp-clip-empty-files": "0.1.1",
-    "gulp-cssnano": "2.1.1",
+    "gulp-clip-empty-files": "0.1.2",
+    "gulp-cssnano": "2.1.2",
     "gulp-env": "0.4.0",
     "gulp-eslint": "2.0.0",
     "gulp-handlebars": "4.0.0",
     "gulp-htmlmin": "1.3.0",
     "gulp-if": "2.0.0",
     "gulp-imagemin": "2.4.0",
-    "gulp-load-plugins": "1.2.0",
+    "gulp-load-plugins": "1.2.2",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
     "gulp-sass": "2.2.0",
     "gulp-scss-lint": "0.3.9",
-    "gulp-sourcemaps": "1.6.0",
+    "gulp-sourcemaps": "2.0.0-alpha",
     "gulp-uglify": "1.5.3",
     "gulp-util": "3.0.7",
     "gulp-wrap": "0.11.0",
     "handlebars": "4.0.5",
-    "jspm": "0.16.31",
+    "jspm": "0.16.33",
     "require-dir": "0.3.0",
-    "sw-precache": "3.1.0",
-    "systemjs-builder": "0.15.13"
+    "sw-precache": "3.1.1",
+    "systemjs-builder": "0.15.15"
   },
   "jspm": {
     "directories": {
