--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
   "license": "AGPL-3.0",
   "dependencies": {},
   "devDependencies": {
-    "babel-eslint": "6.0.3",
+    "babel-eslint": "6.0.4",
     "babel-plugin-transform-async-to-generator": "6.7.4",
     "babel-plugin-transform-class-properties": "6.6.0",
     "babel-plugin-transform-decorators": "6.6.5",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-object-assign": "6.5.0",
     "babel-preset-es2015": "6.6.0",
-    "browser-sync": "2.12.3",
+    "browser-sync": "2.12.5",
     "connect-history-api-fallback": "1.2.0",
     "del": "2.2.0",
     "eslint": "2.8.0",
@@ -62,20 +63,20 @@
     },
     "configFile": "src/app/config.js",
     "dependencies": {
-      "babel-polyfill": "npm:babel-polyfill@^6.3.14",
-      "backbone": "npm:backbone@^1.2.3",
+      "babel-polyfill": "npm:babel-polyfill@^6.7.4",
+      "backbone": "npm:backbone@^1.3.3",
       "backbone.nativeajax": "github:akre54/Backbone.NativeAjax@^0.4.3",
       "backbone.nativeview": "github:akre54/Backbone.NativeView@^0.3.3",
       "handlebars": "github:components/handlebars.js@^4.0.5",
       "underscore": "npm:underscore@^1.8.3"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "babel": "npm:babel-core@^5.8.38",
+      "babel-runtime": "npm:babel-runtime@^5.8.38",
       "core-js": "npm:core-js@^1.1.4"
     },
     "overrides": {
-      "npm:backbone@1.2.3": {
+      "npm:backbone@1.3.3": {
         "map": {
           "jquery": "@empty"
         }
