--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "6.0.4",
-    "babel-plugin-transform-async-to-generator": "6.7.4",
-    "babel-plugin-transform-class-properties": "6.6.0",
-    "babel-plugin-transform-decorators": "6.6.5",
+    "babel-plugin-transform-async-to-generator": "6.8.0",
+    "babel-plugin-transform-class-properties": "6.8.0",
+    "babel-plugin-transform-decorators": "6.8.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-object-assign": "6.5.0",
+    "babel-plugin-transform-object-assign": "6.8.0",
     "babel-preset-es2015": "6.6.0",
-    "browser-sync": "2.12.5",
+    "browser-sync": "2.12.8",
     "connect-history-api-fallback": "1.2.0",
     "del": "2.2.0",
-    "eslint": "2.8.0",
+    "eslint": "2.10.1",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-babel": "6.1.2",
@@ -39,10 +39,11 @@
     "gulp-env": "0.4.0",
     "gulp-eslint": "2.0.0",
     "gulp-handlebars": "4.0.0",
-    "gulp-htmlmin": "1.3.0",
-    "gulp-if": "2.0.0",
-    "gulp-imagemin": "2.4.0",
+    "gulp-htmlmin": "2.0.0",
+    "gulp-if": "2.0.1",
+    "gulp-imagemin": "3.0.1",
     "gulp-load-plugins": "1.2.2",
+    "gulp-real-favicon": "^0.2.1",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
     "gulp-sass": "2.3.1",
@@ -50,13 +51,13 @@
     "gulp-sourcemaps": "2.0.0-alpha",
     "gulp-uglify": "1.5.3",
     "gulp-util": "3.0.7",
-    "gulp-wrap": "0.11.0",
+    "gulp-wrap": "0.12.0",
     "handlebars": "4.0.5",
-    "jspm": "0.16.33",
+    "jspm": "0.16.34",
     "require-dir": "0.3.0",
     "sw-precache": "3.1.1",
-    "systemjs-builder": "0.15.15",
-    "yargs": "4.6.0"
+    "systemjs-builder": "0.15.16",
+    "yargs": "4.7.0"
   },
   "jspm": {
     "directories": {
