--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openstax/os-webview",
-  "version": "1.0.0-alpha.1",
+  "version": "1.1.0",
   "description": "OpenStax webview",
   "contributors": [
     {
