--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     }
   ],
   "scripts": {
+    "start": "gulp dev",
     "prepublish": "jspm install",
     "upgrade": "jspm update",
     "test": "gulp test"
@@ -34,6 +35,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-babel": "6.1.2",
+    "gulp-cli": "gulpjs/gulp-cli#4.0",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-cssnano": "2.1.2",
     "gulp-env": "0.4.0",
