--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-babel": "6.1.2",
-    "gulp-cli": "gulpjs/gulp-cli#4.0",
+    "gulp-cli": "1.2.1",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-cssnano": "2.1.2",
     "gulp-env": "0.4.0",
