--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "gulp-sass": "2.3.2",
     "gulp-scss-lint": "0.4.0",
     "gulp-sourcemaps": "2.0.0-alpha",
-    "gulp-superviewsjs": "1.0.20",
+    "gulp-superviewsjs": "dak/gulp-superviewsjs",
     "gulp-uglify": "1.5.4",
     "gulp-util": "3.0.7",
     "gulp-wrap": "0.13.0",
