--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   "devDependencies": {
     "babel-eslint": "6.1.2",
     "babel-plugin-transform-class-properties": "6.11.5",
-    "babel-plugin-transform-decorators": "6.8.0",
+    "babel-plugin-transform-decorators": "6.13.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-object-assign": "6.8.0",
-    "babel-preset-es2015": "6.9.0",
-    "browser-sync": "2.13.0",
-    "connect-history-api-fallback": "1.2.0",
-    "del": "2.2.1",
-    "eslint": "3.1.1",
+    "babel-preset-es2015": "6.13.2",
+    "browser-sync": "2.14.0",
+    "connect-history-api-fallback": "1.3.0",
+    "del": "2.2.2",
+    "eslint": "3.3.1",
     "find-pkg": "0.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-ava": "0.12.1",
+    "gulp-autoprefixer": "3.1.1",
+    "gulp-ava": "0.14.0",
     "gulp-babel": "6.1.2",
     "gulp-cli": "1.2.2",
     "gulp-clip-empty-files": "0.1.2",
@@ -38,7 +38,7 @@
     "gulp-htmlmin": "2.0.0",
     "gulp-humans": "2.0.2",
     "gulp-if": "2.0.1",
-    "gulp-imagemin": "3.0.2",
+    "gulp-imagemin": "3.0.3",
     "gulp-load-plugins": "1.2.4",
     "gulp-real-favicon": "0.2.1",
     "gulp-rename": "1.2.2",
@@ -47,15 +47,16 @@
     "gulp-scss-lint": "0.4.0",
     "gulp-sourcemaps": "2.0.0-alpha",
     "gulp-superviewsjs": "github:dak/gulp-superviewsjs",
-    "gulp-uglify": "1.5.4",
+    "gulp-uglify": "2.0.0",
     "gulp-util": "3.0.7",
     "gulp-wrap": "0.13.0",
-    "jsdom-global": "2.0.0",
+    "jsdom": "9.4.2",
+    "jsdom-global": "2.1.0",
     "jspm": "0.17.0-beta.23",
     "require-dir": "0.3.0",
     "sw-precache": "4.0.0",
-    "systemjs-builder": "0.15.25",
-    "yargs": "4.8.1"
+    "systemjs-builder": "0.15.29",
+    "yargs": "5.0.0"
   },
   "jspm": {
     "main": "src/app/main.js",
