--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "6.1.2",
+    "babel-plugin-transform-async-to-generator": "6.8.0",
     "babel-plugin-transform-class-properties": "6.11.5",
     "babel-plugin-transform-decorators": "6.13.0",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
