--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - '6.2'
 before_install:
+  - rvm install 2.3.1
   - gem install scss_lint
   - npm install -g gulp-cli jspm
   - jspm config registries.github.auth $JSPM_GITHUB_AUTH_TOKEN
