--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ before_install:
   - rvm install 2.3.1
   - gem install scss_lint
   - npm install -g gulp-cli jspm
+  - jspm cc
   - jspm config registries.github.auth $JSPM_GITHUB_AUTH_TOKEN
 sudo: false
 notifications:
