--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "gulp dev",
     "prepublish": "jspm install",
     "upgrade": "jspm update",
-    "test": "gulp test"
+    "test": "gulp dev-build && nyc --reporter=lcov --reporter=text-lcov --reporter=json ava"
   },
   "repository": {
     "type": "git",
@@ -54,6 +54,7 @@
     "jsdom": "9.4.2",
     "jsdom-global": "2.1.0",
     "jspm": "0.17.0-beta.23",
+    "nyc": "^10.0.0",
     "require-dir": "0.3.0",
     "sw-precache": "4.0.0",
     "systemjs-builder": "0.15.29",
