--- a/package.json
+++ b/package.json
@@ -15,52 +15,52 @@
   "license": "AGPL-3.0",
   "dependencies": {},
   "devDependencies": {
-    "ava": "^0.17.0",
-    "babel-eslint": "6.1.2",
-    "babel-plugin-transform-async-to-generator": "6.8.0",
-    "babel-plugin-transform-class-properties": "6.11.5",
-    "babel-plugin-transform-decorators": "6.13.0",
+    "ava": "^0.19.1",
+    "babel-eslint": "7.2.1",
+    "babel-plugin-transform-async-to-generator": "6.24.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-object-assign": "6.8.0",
-    "babel-preset-es2015": "6.13.2",
+    "babel-plugin-transform-object-assign": "6.22.0",
+    "babel-preset-es2015": "6.24.1",
     "babel-runtime": "^6.20.0",
-    "browser-sync": "2.14.0",
+    "browser-sync": "2.18.8",
     "connect-history-api-fallback": "1.3.0",
     "del": "2.2.2",
-    "eslint": "3.3.1",
+    "eslint": "3.19.0",
     "find-pkg": "0.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "3.1.1",
-    "gulp-ava": "0.14.0",
+    "gulp-ava": "0.16.0",
     "gulp-babel": "6.1.2",
     "gulp-cli": "1.2.2",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-cssnano": "2.1.2",
     "gulp-env": "0.4.0",
     "gulp-eslint": "3.0.1",
-    "gulp-htmlmin": "2.0.0",
+    "gulp-htmlmin": "3.0.0",
     "gulp-humans": "2.0.2",
-    "gulp-if": "2.0.1",
-    "gulp-imagemin": "3.0.3",
-    "gulp-load-plugins": "1.2.4",
-    "gulp-real-favicon": "0.2.1",
+    "gulp-if": "2.0.2",
+    "gulp-imagemin": "3.2.0",
+    "gulp-load-plugins": "1.5.0",
+    "gulp-real-favicon": "0.2.2",
     "gulp-rename": "1.2.2",
     "gulp-replace": "0.5.4",
-    "gulp-sass": "2.3.2",
+    "gulp-sass": "3.1.0",
     "gulp-scss-lint": "0.4.0",
-    "gulp-sourcemaps": "2.0.0-alpha",
+    "gulp-sourcemaps": "2.5.1",
     "gulp-superviewsjs": "github:dak/gulp-superviewsjs",
-    "gulp-uglify": "2.0.0",
-    "gulp-util": "3.0.7",
+    "gulp-uglify": "2.1.2",
+    "gulp-util": "3.0.8",
     "gulp-wrap": "0.13.0",
-    "jsdom": "9.4.2",
-    "jsdom-global": "2.1.0",
+    "jsdom": "9.12.0",
+    "jsdom-global": "2.1.1",
     "jspm": "0.17.0-beta.23",
     "nyc": "^10.0.0",
-    "require-dir": "0.3.0",
-    "sw-precache": "4.0.0",
-    "systemjs-builder": "0.15.29",
-    "yargs": "5.0.0"
+    "require-dir": "0.3.1",
+    "sw-precache": "5.1.0",
+    "systemjs-builder": "0.16.4",
+    "yargs": "7.0.2"
   },
   "jspm": {
     "main": "src/app/main.js",
@@ -123,7 +123,7 @@
           "_stream_transform": "readable-stream/transform"
         }
       },
-      "npm:debug@2.2.0": {
+      "npm:debug@2.6.3": {
         "main": "browser.js",
         "jspmNodeConversion": false,
         "format": "cjs",
@@ -145,7 +145,7 @@
           "test.js"
         ]
       },
-      "npm:ms@0.7.1": {
+      "npm:ms@0.7.2": {
         "jspmNodeConversion": false,
         "format": "cjs"
       },
