--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,9 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
-script: ./script/test
+script:
+  - ./script/setup
+  - ./script/test
 after_script:
   # Report coverage to codecov
   - bash <(curl -s https://codecov.io/bash)
