--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 language: node_js
-node_js:
-  - '6.2'
 before_install:
   - rvm install 2.3.1
   - gem install scss_lint
-  - npm install -g gulp-cli jspm
-  - jspm config registries.github.auth $JSPM_GITHUB_AUTH_TOKEN
 sudo: false
 notifications:
   email: false
@@ -19,6 +15,9 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+script:
+  - ./script/setup
+  - ./script/test
 after_script:
   # Report coverage to codecov
   - bash <(curl -s https://codecov.io/bash)
