--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "OpenStax webview",
   "scripts": {
     "start": "gulp dev",
-    "prepublish": "jspm install",
+    "build": "gulp",
     "upgrade": "jspm update",
     "test": "gulp dev-build && nyc --reporter=text ava --serial ./test/src/*/*.js && ./script/postprocess-coverage && nyc report --reporter=html --reporter=json --reporter=text"
   },
@@ -33,7 +33,7 @@
     "gulp-autoprefixer": "3.1.1",
     "gulp-ava": "0.16.0",
     "gulp-babel": "6.1.2",
-    "gulp-cli": "1.2.2",
+    "gulp-cli": "^1.2.2",
     "gulp-clip-empty-files": "0.1.2",
     "gulp-cssnano": "2.1.2",
     "gulp-env": "0.4.0",
