--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "ava": "^0.19.1",
     "babel-eslint": "7.2.1",
-    "babel-jest": "^19.0.0",
+    "babel-jest": "19.0.0",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-decorators": "6.24.1",
@@ -56,8 +56,8 @@
     "gulp-uglify": "2.1.2",
     "gulp-util": "3.0.8",
     "gulp-wrap": "0.13.0",
-    "jest": "^19.0.2",
-    "jest-cli": "^19.0.2",
+    "jest": "19.0.2",
+    "jest-cli": "19.0.2",
     "jsdom": "9.12.0",
     "jsdom-global": "2.1.1",
     "jspm": "0.17.0-beta.23",
