--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "gulp",
     "upgrade": "jspm update",
     "avatest": "gulp dev-build && nyc --reporter=text ava --serial ./test/src/*/*.js && ./script/postprocess-coverage && nyc report --reporter=html --reporter=json --reporter=text",
+    "pretest": "npm run-script build",
     "test": "jest --coverage ./test/src/*/*.js"
   },
   "repository": {
