Suggest completions for school name on adoption form

--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
       "uglify-to-browserify": "npm:uglify-to-browserify@1.0"
     },
     "peerDependencies": {
-      "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
+      "assert": "github:jspm/nodelibs-util@^0.2.0-alpha",
       "bcrypt-pbkdf": "npm:bcrypt-pbkdf@^1.0.0",
       "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
       "child_process": "github:jspm/nodelibs-child_process@^0.2.0-alpha",
