--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-    "presets": ["es2015"]
+    "presets": ["env"],
+    "plugins": [
+        ["transform-runtime", {
+            "polyfill": false,
+            "regenerator": true
+            }
+        ]
+    ]
 }
