--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "7.2.3",
-    "babel-jest": "19.0.0",
+    "babel-jest": "*",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-decorators": "6.24.1",
@@ -27,13 +27,13 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "6.24.1",
     "babel-runtime": "^6.20.0",
-    "browser-sync": "2.18.8",
+    "browser-sync": "2.18.11",
     "connect-history-api-fallback": "1.3.0",
     "del": "2.2.2",
     "eslint": "3.19.0",
     "find-pkg": "0.1.2",
     "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "3.1.1",
+    "gulp-autoprefixer": "4.0.0",
     "gulp-babel": "6.1.2",
     "gulp-cli": "^1.2.2",
     "gulp-clip-empty-files": "0.1.2",
@@ -57,19 +57,19 @@
     "gulp-util": "3.0.8",
     "gulp-wrap": "0.13.0",
     "isomorphic-fetch": "^2.2.1",
-    "jest": "19.0.2",
-    "jest-cli": "19.0.2",
-    "jsdom": "10.0.0",
-    "jsdom-global": "2.1.1",
+    "jest": "20.0.3",
+    "jest-cli": "20.0.3",
+    "jsdom": "10.1.0",
+    "jsdom-global": "3.0.2",
     "jspm": "0.17.0-beta.23",
     "node-localstorage": "^1.3.0",
     "recordo": "0.0.6",
     "regenerator-runtime": "^0.10.5",
     "require-dir": "0.3.1",
-    "sw-precache": "5.1.0",
+    "sw-precache": "5.1.1",
     "systemjs-builder": "0.16.4",
     "systemjs-jest": "^1.0.0",
-    "yargs": "7.1.0"
+    "yargs": "8.0.1"
   },
   "jest": {
     "moduleNameMapper": {
@@ -99,6 +99,7 @@
     },
     "dependencies": {
       "babel-polyfill": "npm:babel-polyfill@^6.23.0",
+      "babel-runtime": "npm:babel-runtime@^6.23.0",
       "fetch": "npm:whatwg-fetch@^1.0.0",
       "recordo": "npm:recordo@0.0.6",
       "superb": "npm:superb.js@^0.2.7"
@@ -113,7 +114,7 @@
       "uglify-to-browserify": "npm:uglify-to-browserify@1.0"
     },
     "peerDependencies": {
-      "assert": "github:jspm/nodelibs-util@^0.2.0-alpha",
+      "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
       "bcrypt-pbkdf": "npm:bcrypt-pbkdf@^1.0.0",
       "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
       "child_process": "github:jspm/nodelibs-child_process@^0.2.0-alpha",
@@ -156,7 +157,7 @@
           "_stream_transform": "readable-stream/transform"
         }
       },
-      "npm:debug@2.6.6": {
+      "npm:debug@2.6.7": {
         "main": "browser.js",
         "jspmNodeConversion": false,
         "format": "cjs",
@@ -187,9 +188,8 @@
           "process": "@empty"
         }
       },
-      "npm:ms@0.7.3": {
-        "jspmNodeConversion": false,
-        "format": "cjs"
+      "npm:pbkdf2@3.0.12": {
+        "main": "browser.js"
       },
       "npm:safe-buffer@5.0.1": {
         "browser": "index.js"
