Replace Higher Ed menu with Technology menu

--- a/test/selenium/sitemap/properties.ini
+++ b/test/selenium/sitemap/properties.ini
@@ -8,7 +8,6 @@ contact
 faq
 foundation
 give
-higher-ed
 interest
 impact
 license
@@ -21,3 +20,4 @@ subjects/social-sciences
 subjects/humanities
 subjects/ap
 support
+technology
