--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jsdom-global": "3.0.2",
     "jspm": "0.17.0-beta.23",
     "node-localstorage": "^1.3.0",
+    "pattern-library": "github:openstax/pattern-library",
     "recordo": "0.0.6",
     "regenerator-runtime": "^0.10.5",
     "require-dir": "0.3.1",
