--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "OpenStax webview",
   "scripts": {
     "start": "gulp dev",
-    "build": "gulp",
-    "upgrade": "jspm update",
+    "build": "rollup --config ./rollup.config.js",
     "pretest": "npm run-script build",
     "test": "jest --coverage ./test/src/*/*.js"
   },
@@ -14,17 +13,20 @@
     "url": "https://github.com/openstax/os-webview.git"
   },
   "license": "AGPL-3.0",
-  "dependencies": {},
+  "dependencies": {
+    "rollup-plugin-babel": "^3.0.2",
+    "superb.js": "^0.2.16",
+    "whatwg-fetch": "^2.0.3"
+  },
   "devDependencies": {
     "babel-eslint": "7.2.3",
     "babel-jest": "*",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "6.24.1",
     "babel-runtime": "^6.20.0",
@@ -68,6 +70,9 @@
     "recordo": "0.0.6",
     "regenerator-runtime": "^0.11.0",
     "require-dir": "0.3.2",
+    "rollup": "^0.50.0",
+    "rollup-plugin-handlebars-plus": "^0.2.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "sw-precache": "5.2.0",
     "systemjs-builder": "0.16.10",
     "systemjs-jest": "^1.0.0",
