--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
-    "rollup-plugin-babel": "^3.0.2",
     "superb.js": "^0.2.16",
     "whatwg-fetch": "^2.0.3"
   },
@@ -71,6 +70,8 @@
     "regenerator-runtime": "^0.11.0",
     "require-dir": "0.3.2",
     "rollup": "^0.50.0",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-superviews": "^1.0.0",
     "sw-precache": "5.2.0",
