get rollup and jest to both use .babelrc
`"presets": ["env”]` causes rollup to fail but is needed for jest

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "presets": ["env"],
-  "plugins": ["transform-decorators-legacy"]
+  "plugins": ["transform-decorators-legacy"],
+  "env": {
+    "test": {
+      "presets": ["env"],
+      "plugins": ["transform-decorators-legacy"]
+    }
+  }
 }
