--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
+    "rollup-stream": "^1.24.1",
     "superb.js": "^0.2.16",
+    "uglify-es": "^3.1.3",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
@@ -52,7 +59,7 @@
     "gulp-replace": "0.6.1",
     "gulp-sass": "3.1.0",
     "gulp-scss-lint": "0.5.0",
-    "gulp-sourcemaps": "2.6.1",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-superviewsjs": "github:dak/gulp-superviewsjs",
     "gulp-uglify": "3.0.0",
     "gulp-util": "3.0.8",
