--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "rollup": "^0.50.0",
+    "rollup-plugin-commonjs": "^8.2.3",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^2.0.0",
     "superb.js": "^0.2.16",
     "whatwg-fetch": "^2.0.3"
   },
