--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "gulp dev",
     "build": "gulp",
     "pretest": "npm run-script build",
-    "test": "jest --coverage ./test/src/*/*.js"
+    "test": "jest --coverage ./test/src/*/*.js",
+    "test-debug": "jest --coverage ./test/src/*/*.js"
   },
   "repository": {
     "type": "git",
