--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "superb.js": "^0.2.16",
     "webpack": "^3.8.1",
+    "webpack-stream": "^4.0.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
