--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
   yarn: true
   directories:
     - node_modules
-    
+
 notifications:
   email: false
 env:
@@ -20,6 +20,7 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+      - shellcheck
     packages:
       - g++-4.8
 script:
