--- a/script/build
+++ b/script/build
@@ -1,7 +1,7 @@
 #!/bin/bash
-
-source ./script/bootstrap || exit 1
+cd "$(dirname "$0")/.." || exit 111
+source ./script/bootstrap || exit 111
 
 npm run-script build || exit 2
 
-$(npm bin)/webpack --config webpack.config.js
+"$(npm bin)/webpack" --config webpack.config.js
