Stop webpack warnings

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "http-server": "^0.10.0",
+    "ignore-loader": "^0.1.2",
     "rollup": "^0.50.0",
     "rollup-plugin-commonjs": "^8.2.3",
     "rollup-plugin-node-resolve": "^3.0.0",
