--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "moduleNameMapper": {
       "^~/(.*)": "<rootDir>/dist/app/$1",
       "recordo": "<rootDir>/node_modules/recordo/dist/recordo.js",
-      "settings": "<rootDir>/dist/settings"
+      "settings": "<rootDir>/src/settings-example.js"
     },
     "collectCoverage": true,
     "coverageReporters": [
