--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rollup-plugin-commonjs": "^8.2.3",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
+    "source-map-loader": "^0.2.3",
     "superb.js": "^0.2.16",
     "webpack": "^3.8.1",
     "webpack-stream": "^4.0.0",
