--- a/script/build
+++ b/script/build
@@ -2,6 +2,6 @@
 cd "$(dirname "$0")/.." || exit 111
 source ./script/bootstrap || exit 111
 
-npm run-script build || exit 2
+try npm run-script build
 
-"$(npm bin)/webpack" --config webpack.config.js
+try "$(npm bin)/node-sass" --source-map true --source-map-contents true --output dist/styles/ src/styles/main.scss
