--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
+    "hard-source-webpack-plugin": "^0.5.3",
     "http-server": "^0.10.0",
     "ignore-loader": "^0.1.2",
     "rollup": "^0.50.0",
