fix sourcemaps (JavaScript, CSS, and HTML templates) (#1003)
* :bug: fix JavaScript sourcemaps

* :bug: fix CSS sourcemaps (HACK)

This runs `node-sass` directly rather than `gulp-sass`. It should be switched back to `gulp-sass`

* :bug: fix HTML sourcemaps

* Merge branch 'master' into fix-sourcemaps

* fix PR review issues

* Fix build for dev

--- a/script/build
+++ b/script/build
@@ -2,4 +2,9 @@
 cd "$(dirname "$0")/.." || exit 111
 source ./script/bootstrap || exit 111
 
-npm run-script build || exit 2
+try npm run-script build
+
+try "$(npm bin)/node-sass" --source-map true --source-map-contents true \
+--output dist/styles/ \
+--include-path ./node_modules \
+src/styles/main.scss
