--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "jsdom": "11.2.0",
     "jsdom-global": "3.0.2",
     "node-localstorage": "^1.3.0",
-    "pattern-library": "github:openstax/pattern-library",
+    "pattern-library": "github:openstax/pattern-library#v1.1.0",
     "recordo": "^0.0.6",
     "regenerator-runtime": "^0.11.0",
     "require-dir": "0.3.2",
