Update get-this-book behaviors

--- a/gulp/.scss-lint.yml
+++ b/gulp/.scss-lint.yml
@@ -25,6 +25,7 @@ linters:
         extra_properties:
             - grid-gap
             - grid-template-columns
+            - grid-template-rows
             - grid-column-start
 
     PropertyUnits:
