First round of design fixes

--- a/gulp/.scss-lint.yml
+++ b/gulp/.scss-lint.yml
@@ -29,6 +29,7 @@ linters:
             - grid-template-columns
             - grid-template-rows
             - grid-column-start
+            - justify-items
 
     PropertyUnits:
         global: ['em', 'rem', '%', 'vw', 'vh', 'vmin', 'vmax', 's', 'fr']
