--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "http-server": "^0.10.0",
     "ignore-loader": "^0.1.2",
     "particles.js": "^2.0.0",
-    "pattern-library": "github:openstax/pattern-library#v1.1.2p1",
+    "pattern-library": "github:openstax/pattern-library#v1.1.3",
     "rollup": "^0.50.0",
     "rollup-plugin-commonjs": "^8.2.3",
     "rollup-plugin-node-resolve": "^3.0.0",
