Remove whatwg-fetch and add cache-busting

--- a/script/build
+++ b/script/build
@@ -2,6 +2,7 @@
 cd "$(dirname "$0")/.." || exit 111
 source ./script/bootstrap || exit 111
 
+rm -rf dist
 try npm run-script build
 do_progress "Removing temporary build files" \
   /bin/rm -r ./dist/settings-example* ./dist/app
