Basic layout for desktop and mobile complete

--- a/gulp/.scss-lint.yml
+++ b/gulp/.scss-lint.yml
@@ -30,6 +30,7 @@ linters:
             - grid-gap
             - grid-row-gap
             - grid-column-gap
+            - grid-row-end
             - grid-row-start
             - grid-template-columns
             - grid-template-rows
