--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     },
     "license": "AGPL-3.0",
     "dependencies": {
-        "babel-preset-react": "^6.24.1",
         "gulp-rev": "^9.0.0",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
@@ -19,16 +18,16 @@
         "workbox-build": "^4.3.1"
     },
     "devDependencies": {
+        "@babel/core": "^7.8.7",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-proposal-decorators": "^7.8.3",
+        "@babel/plugin-transform-async-to-generator": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.8.3",
+        "@babel/preset-env": "^7.8.7",
+        "@babel/preset-react": "^7.8.3",
         "babel-eslint": "7.2.3",
-        "babel-jest": "*",
-        "babel-plugin-transform-async-to-generator": "6.24.1",
-        "babel-plugin-transform-class-properties": "6.24.1",
-        "babel-plugin-transform-decorators": "6.24.1",
-        "babel-plugin-transform-decorators-legacy": "1.3.4",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-polyfill": "^6.23.0",
-        "babel-preset-env": "^1.4.0",
-        "babel-runtime": "^6.20.0",
+        "babel-jest": "^25.1.0",
+        "babel-polyfill": "^6.26.0",
         "browser-sync": "^2.18.13",
         "connect-history-api-fallback": "1.3.0",
         "css-loader": "^1.0.1",
@@ -37,7 +36,7 @@
         "find-pkg": "1.0.0",
         "gulp": "gulpjs/gulp#4.0",
         "gulp-autoprefixer": "4.0.0",
-        "gulp-babel": "7.0.0",
+        "gulp-babel": "^8.0.0",
         "gulp-cli": "^2.0.1",
         "gulp-clip-empty-files": "0.1.2",
         "gulp-env": "0.4.0",
@@ -58,8 +57,8 @@
         "gulp-wrap": "0.13.0",
         "http-server": "^0.10.0",
         "ignore-loader": "^0.1.2",
-        "jest": "23.6.0",
-        "jsdom": "11.2.0",
+        "jest": "^25.1.0",
+        "jsdom": "^16.2.1",
         "jsdom-global": "3.0.2",
         "mapbox-gl": "^0.47.0",
         "node-localstorage": "^1.3.0",
